# gomoku

./: .env.example  .gitignore  README.MD  docker-compose.yml  justfile
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml
backend/.cargo/: config.toml
backend/.sqlx/: query-0a516e2055c1287062e4a4102fdf2ccf338967dccb66bdc840dc72b2433ef860.json  query-0d1da55db8df0ace0cb32cd23af11779104ccedea4fb6626b95e5f418c748fc7.json  query-0e0c8e6e87a565ae9e971ac5ed64e4045fb2633251af4f8c5f437e1e8baf0a4e.json  query-0fccbc5bd30756c5cd3dc3b727998ff930aa21f6763baed1b23e747354f01e16.json  query-11443cd6b5cbe74e130823497189c04204f79d937e26186a021cf45ef2b497bb.json  query-27ddd485801ef2e6507bc5d2a8361e49dd3900f9b4b43934e5e05aa6b9fed4d0.json  query-30c39ed8a1a28ed3968f00778a44f1bcf049b05cdc6795cbb31e4ec17b99606e.json  query-39b08ace80a0cc3465c2e430d636cea57a384511b06ef26015e6c8ba9a88c00c.json  query-4429468635824cd39c6990faa546bd13c2ed2a57e5d9ceda6e2140ee6d376f1a.json  query-4e1856499bac4aa1af2fbed6e4f4feaf6bdca348b27405009b29d3b3417b27de.json  query-51dc39629023dee2d8b8dbb2b0aff7a49007f75eacd3005d064f75198e0afa29.json  query-5fe5111cf98f141f0355f3e946acb21fddd26922316cf0813fc9f1c9de3098b0.json  query-6e1a7d9f58c7140447eb59e7b4fd9c299525845375c999dcf36e07c437ac7d01.json  query-71d4a0cc12b824a63b715b7bd73af34f25a45aae4f1cb3d5054841beb3dda1bc.json  query-7bb39c18553ea90b7df40883d75acea07caaf89606a1f2e0cfaf19af70ee06e7.json  query-7f4839d8916b923e162d2309a4b863a64d25b6ff1ae6d25b1a2ef313aa0b4711.json  query-8c156efa98b966b3ee53c35c02b8a16d279af0e6da5fd44a92e8f0d5627b7e6d.json  query-8ee2d2aae55d6a2b3667feac8a478796f4bfa81fda74ce0abe69e017393e6b93.json  query-8fb1846bce87ae43d71534549c2ad4092007ede6208dcbe9beb348d88d0a38af.json  query-952df484944b5de86ad882786e42b410cb224414ca13f57c53673ac732bebadb.json  (+11 more)
backend/migrations/: 20241124101423_create_game_table.sql  (+3 more)
(+70 files in other folders)
