[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["ws"] }
chrono = "0.4.38"
envy = "0.4.2"
http-body-util = "0.1.2"
lazy_static = "1.5.0"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "time",
    "uuid",
    "migrate",
] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rand = "0.8.5"
futures = "0.3.31"
