[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4.38"
envy = "0.4.2"
http-body-util = "0.1.2"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "time",
    "uuid",
    "migrate",
] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rand = "0.8.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
axum-macros = "0.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2"
opentelemetry-jaeger = "0.16.0"
